--- a/assets/results.css
+++ b/assets/results.css
@@ -1,98 +1,162 @@
-body {
-  margin: 0, auto;
-  padding: 0;
-  box-sizing: border-box;
-  background-image: url("../assets/img/bg.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-  color: white;
-  font-family: "Inter", sans-serif;
+#logo-container img {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  max-width: 200px;
+  margin-top: 50px;
+  margin-left: 100px;
+  z-index: 1;
 }
 
-header {
-  margin-left: 4em;
-  margin-top: 4em;
+#result-body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100%;
+  background-image: url("./img/bg.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
-img {
-  width: 10em;
-}
-h1 {
+
+.result {
   font-family: "Outfit", sans-serif;
-  font-weight: 300;
+  color: white;
+  letter-spacing: 1.5px;
+  line-height: 12px;
+  font-size: 25px;
+  margin-inline: auto;
+  text-align: center;
+}
+
+.result > p {
+  letter-spacing: 0.4px;
+}
+
+.percentage {
+  position: relative;
+}
+
+.answers {
+  color: white;
+  font-family: "Outfit", sans-serif;
+  font-size: 45px;
+  position: absolute;
+  top: 236px;
+}
+
+.container {
+  height: 550px;
+  width: 550px;
+  position: relative;
+  transform: translate(-50%, -50%);
+  top: 300px;
+  left: 50%;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+}
+
+.container::before {
+  content: "";
+  position: absolute;
+  height: 75%;
+  width: 75%;
+  border-radius: 50%;
+  background-image: url(./img/bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+#feedback-button {
+  background-color: transparent;
+  border: 2px white solid;
+  color: white;
+  font-family: "Outfit", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bold;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+  position: absolute;
+  width: 200px;
+  top: 712px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.button:hover {
+  box-shadow: 0px 0px 14px 3px rgba(207, 255, 253, 1);
+}
+
+#true_question {
+  top: 280px;
+  font-weight: bold;
+  font-size: 100px;
+}
+
+#false_question {
+  top: 280px;
+  font-weight: bold;
+  font-size: 100px;
+}
+
+#quantity_true {
+  top: 380px;
+  font-weight: 100;
+  font-size: 40px;
+}
+
+#quantity_false {
+  top: 393px;
+  font-weight: 100;
+  font-size: 40px;
+}
+
+.position_correct {
+  left: 180px;
+}
+
+.position_wrong {
+  right: 200px;
+}
+
+#correct {
   font-size: 60px;
 }
 
-.container-results1 {
-  text-align: center;
+#wrong {
+  font-size: 60px;
 }
 
-#mainResults {
-  margin-bottom: 80px;
-}
-#Header {
-  margin-bottom: 50px;
-}
-.h1-results,
-.p1,
-.rate {
-  margin: 0 auto;
-}
-.rate,
-.p1 {
-  font-size: 80px;
-}
-.h1-results,
-.rate {
-  font-weight: 700;
-}
-.p1 {
-  font-weight: bold;
-  font-size: 40px;
-  margin-bottom: 0;
-}
-.summary {
-  font-size: 40px;
-  margin-top: 0;
-}
-/*flexbox*/
-#container-result2 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-#leftPosition,
-#centralPosition,
-#rightPosition {
-  width: 40%;
-}
-#rightPosition {
-  color: rgba(219, 210, 210, 0.984);
-}
-.graphic {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  position: relative;
-  text-align: center;
-}
-#feed {
-  background-color: #4caf4f00;
-  border: 2px solid white;
+#text_result {
   color: white;
-  text-decoration: none;
-  font-weight: bold;
-  cursor: pointer;
-  padding: 20px 60px;
-  font-size: 15px;
+  width: 600px;
+  font-size: 28px;
+  font-weight: 600;
+  font-family: "Inter", sans-serif;
+  position: absolute;
+  display: grid;
+  place-items: center;
+  text-align: center;
 }
-.p2wrong,
-.p2correct {
-  color: #00ffff;
-  font-weight: bold;
-  margin-top: 0;
-  font-size: 16px;
+
+#different_color {
+  color: aqua;
+}
+
+.lower_text {
+  font-size: 20px;
+  font-weight: 100;
 }
