--- a/assets/benchmark.css
+++ b/assets/benchmark.css
@@ -103,7 +103,7 @@ ul > li {
   width: 100%;
   border-radius: 4rem;
   height: 7rem;
-  border-width: 5px;
+  border: none;
   box-shadow: -2px 8px 5px white;
   border-color: white;
   font-size: 1.5rem;
