--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+
 *,
 *::before,
 *::after {
@@ -9,6 +11,7 @@ body {
   background-image: url(../assets/img/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: "Inter", sans-serif;
 }
 
 header img {
