--- a/assets/benchmark.css
+++ b/assets/benchmark.css
@@ -28,7 +28,7 @@ header img {
 }
 .first-h1 {
   font-family: "Outfit", sans-serif;
-  font-size: 5rem;
+  font-size: 4rem;
 }
 
 .main-firstpage h1 span {
@@ -104,7 +104,7 @@ ul > li {
   border-radius: 4rem;
   height: 7rem;
   border: none;
-  box-shadow: -2px 8px 5px white;
+
   border-color: white;
   font-size: 1.5rem;
   color: white;
@@ -159,6 +159,9 @@ ul > li {
   margin-top: 4rem;
 }
 
+#h1-second-page {
+  font-size: 3rem;
+}
 .selected-answer {
   background-color: #c2128d;
 }
