--- a/assets/benchmark.css
+++ b/assets/benchmark.css
@@ -158,15 +158,10 @@ ul > li {
   margin: auto;
   border-radius: 4rem;
   margin-top: 4rem;
-  margin-bottom: 0;
-}
-footer > p {
-  margin-top: 0;
 }
 
 #h1-second-page {
-  font-size: 60px;
-  margin-top: 0;
+  font-size: 3rem;
 }
 .selected-answer {
   background-color: #c2128d;
