--- a/assets/results.css
+++ b/assets/results.css
@@ -1,6 +1,4 @@
 #logo-container img {
-  display: flex;
-  position: absolute;
   top: 0;
   left: 0;
   max-width: 200px;
@@ -9,11 +7,9 @@
   z-index: 1;
 }
 
-#result-body {
+body {
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   min-height: 100%;
   background-image: url("./img/bg.jpg");
@@ -27,18 +23,15 @@
   font-family: "Outfit", sans-serif;
   color: white;
   letter-spacing: 1.5px;
-  line-height: 12px;
-  font-size: 25px;
+  line-height: 5%;
+  font-size: 35px;
   margin-inline: auto;
   text-align: center;
+  margin-top: 20px;
 }
 
 .result > p {
   letter-spacing: 0.4px;
-}
-
-.percentage {
-  position: relative;
 }
 
 .answers {
@@ -46,7 +39,7 @@
   font-family: "Outfit", sans-serif;
   font-size: 45px;
   position: absolute;
-  top: 236px;
+  top: 300px;
 }
 
 .container {
@@ -76,7 +69,7 @@
 
 #feedback-button {
   background-color: transparent;
-  border: 2px white solid;
+  border: 3px white solid;
   color: white;
   font-family: "Outfit", sans-serif;
   text-transform: uppercase;
@@ -99,7 +92,7 @@
 }
 
 .button:hover {
-  box-shadow: 0px 0px 14px 3px rgba(207, 255, 253, 1);
+  box-shadow: 0px 0px 14px 30px rgb(27, 181, 176);
 }
 
 #true_question {
