Squashed commit of the following:
commit 8a9a24f0754e7ed9f76fe027ca1e40c2cf665bd4
Merge: 1ab657a ef6c85c
Author: GiuseppeBarresi98 <145044894+GiuseppeBarresi98@users.noreply.github.com>
Date:   Fri Oct 20 11:48:35 2023 +0200

    Merge branch 'Features_AbderrahmaneHarouane' of https://github.com/abdHar12/BuildWeek-project_Team13 into Features_AbderrahmaneHarouane

commit 1ab657a8da35d48101a9de1078f11baac5eb2ce4
Merge: c4960ce 62ce90f
Author: GiuseppeBarresi98 <145044894+GiuseppeBarresi98@users.noreply.github.com>
Date:   Fri Oct 20 11:48:23 2023 +0200

    Merge branch 'Features_GiuseppeBarresi' into Features_AbderrahmaneHarouane

commit ef6c85c9577f6c2af12a168d38e2a4eb92bfb859
Merge: c4960ce 62ce90f
Author: abdHar12 <145681190+abdHar12@users.noreply.github.com>
Date:   Fri Oct 20 11:44:24 2023 +0200

    Merge branch 'Features_GiuseppeBarresi' into Features_AbderrahmaneHarouane

commit c4960ceb37c1e70567781a7f1c1c50b08968d166
Author: abdHar12 <145681190+abdHar12@users.noreply.github.com>
Date:   Fri Oct 20 11:33:42 2023 +0200

    allignment in result.css

commit e90c0a9e68f34c001b027830fb6f3733ca729b7a
Author: abdHar12 <145681190+abdHar12@users.noreply.github.com>
Date:   Fri Oct 20 11:26:53 2023 +0200

    Revert "Revert "fixed page of true and false answers""

    This reverts commit e7ada2b410c39dafaed2b0b540dd906de5c5551a.

commit e7ada2b410c39dafaed2b0b540dd906de5c5551a
Author: abdHar12 <145681190+abdHar12@users.noreply.github.com>
Date:   Fri Oct 20 11:18:38 2023 +0200

    Revert "fixed page of true and false answers"

    This reverts commit 1c778e045f216d0160f78e77441ffb261809c408.

commit e9be97520d825a4f08815c53298e69221fd8ead5
Author: abdHar12 <145681190+abdHar12@users.noreply.github.com>
Date:   Fri Oct 20 11:15:06 2023 +0200

    removed comments etc

--- a/assets/results.css
+++ b/assets/results.css
@@ -1,4 +1,6 @@
 #logo-container img {
+  display: flex;
+  position: absolute;
   top: 0;
   left: 0;
   max-width: 200px;
@@ -7,9 +9,11 @@
   z-index: 1;
 }
 
-body {
+#result-body {
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   min-height: 100%;
   background-image: url("./img/bg.jpg");
@@ -23,15 +27,18 @@ body {
   font-family: "Outfit", sans-serif;
   color: white;
   letter-spacing: 1.5px;
-  line-height: 5%;
-  font-size: 35px;
+  line-height: 12px;
+  font-size: 25px;
   margin-inline: auto;
   text-align: center;
-  margin-top: 20px;
 }
 
 .result > p {
   letter-spacing: 0.4px;
+}
+
+.percentage {
+  position: relative;
 }
 
 .answers {
@@ -39,7 +46,7 @@ body {
   font-family: "Outfit", sans-serif;
   font-size: 45px;
   position: absolute;
-  top: 300px;
+  top: 236px;
 }
 
 .container {
@@ -69,7 +76,7 @@ body {
 
 #feedback-button {
   background-color: transparent;
-  border: 3px white solid;
+  border: 2px white solid;
   color: white;
   font-family: "Outfit", sans-serif;
   text-transform: uppercase;
@@ -92,7 +99,7 @@ body {
 }
 
 .button:hover {
-  box-shadow: 0px 0px 14px 30px rgb(27, 181, 176);
+  box-shadow: 0px 0px 14px 3px rgba(207, 255, 253, 1);
 }
 
 #true_question {
