--- a/assets/benchmark.css
+++ b/assets/benchmark.css
@@ -105,7 +105,7 @@ ul > li {
   border-radius: 4rem;
   height: 7rem;
   border: none;
-
+  cursor: pointer;
   border-color: white;
   font-size: 1.5rem;
   color: white;
